--- a/test/index.html
+++ b/test/index.html
@@ -14,6 +14,7 @@
 
 	<script type="text/javascript" src="hubTest.js"></script>
 	<script type="text/javascript" src="eventDenormalizerTest.js"></script>
+	<script type="text/javascript" src="commandTest.js"></script>
 
 </head>
 <body>
