observe a command to react on responding event

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,7 @@
 	<script type="text/javascript" src="qunit-git.js"></script>
 	<script type="text/javascript" src="sinon-1.2.0.js"></script>
 
+	<script type="text/javascript" src="bootstrap.js"></script>
 	<script type="text/javascript" src="hubTest.js"></script>
 	<script type="text/javascript" src="eventDenormalizerTest.js"></script>
 	<script type="text/javascript" src="commandTest.js"></script>
