hint for delay added - not that people think module is that slow!

--- a/sample/index.html
+++ b/sample/index.html
@@ -19,6 +19,8 @@
 
         <ul id="persons"></ul>
     </div>
+
+    <div>PS: we use a delay of 1s in sample.js to responde to a command so you can better see effect. If you like realtime change delay var to 0 (at top of sample.js)!!!</div>
  
 </body>
 
