--- a/source/layout.html
+++ b/source/layout.html
@@ -23,7 +23,7 @@
     <a href="">
         <h2>backbone</h2>
         <h1 id="title" style="display: none;">.CQRS</h1>
-        <h2 id="subtitle" style="display: none;">impliyfied</h2>
+        <h2 id="subtitle" style="display: none;">implified</h2>
     </a>
 </header>
 
