--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <a href="">
         <h2>backbone</h2>
         <h1 id="title" style="display: none;">.CQRS</h1>
-        <h2 id="subtitle" style="display: none;">impliyfied</h2>
+        <h2 id="subtitle" style="display: none;">implified</h2>
     </a>
 </header>
 
@@ -37,6 +37,12 @@ providing needed infrastructure.</p>
 <p>To use CQRS on the clientside and inside Backbone.js we will need to push <em>events</em> 
 to the browser. You can achieve this via websockets, flash, long polling or any 
 other technique around.</p>
+
+<h1>Download</h1>
+
+<p><section id="download"> 
+    <a class="button" href="public/downloads/backbone.CQRS-0.4.zip">backbone.CQRS v0.4</a> 
+</section></p>
 
 <h1>INITIALIZATION</h1>
 
