added release notes

--- a/index.html
+++ b/index.html
@@ -157,6 +157,13 @@ was send as response:</p>
 
 <h2>Release Notes</h2>
 
+<h3>v0.5.5</h3>
+
+<ul>
+<li>customizable attribute lookup for model.id and model.data in eventdenormalizers</li>
+<li>changed order: first denormalize than call observers for an event</li>
+</ul>
+
 <h3>v0.5.0</h3>
 
 <ul>
