updated release notes

--- a/index.html
+++ b/index.html
@@ -157,6 +157,12 @@ was send as response:</p>
 
 <h2>Release Notes</h2>
 
+<h3>v0.5.6</h3>
+
+<ul>
+<li>small fixes</li>
+</ul>
+
 <h3>v0.5.5</h3>
 
 <ul>
